--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "repository": "git@github.com:anrid/doniapp.git",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline --watch --port 8889 --progress --quiet --content-base build/"
+    "start": "webpack-dev-server --hot --inline --watch --port 8889 --progress --quiet --content-base build/",
+    "test": "node cli/babel-tape-runner.js app/**/__tests__/*Tests.js",
+    "test-nice": "npm test | faucet"
   },
   "author": "Anri Digholm",
   "license": "ISC",
@@ -24,13 +26,20 @@
     "autoprefixer": "^6.4.1",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.16.0",
     "css-loader": "^0.25.0",
+    "faucet": "0.0.1",
+    "glob": "^7.1.0",
     "postcss-loader": "^0.13.0",
     "precss": "^1.4.0",
+    "redux-mock-store": "^1.2.1",
+    "sinon": "^1.17.6",
     "style-loader": "^0.13.1",
+    "tape": "^4.6.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.2"
   }
