--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "repository": "git@github.com:anrid/doniapp.git",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline --watch --port 8889 --quiet --content-base build/",
+    "app": "webpack-dev-server --hot --inline --watch --port 8889 --quiet --content-base build/",
     "test-dev": "node cli/babel-tape-runner.js app/**/__tests__/*Tests.js",
     "test": "npm run test-dev | faucet",
     "api": "nodemon --ext js,html --watch apiServer/ apiServer/index.js",
-    "dev": "concurrently --kill-others --prefix '[{name}]' --names 'BUNDLE,API' -c 'bgBlue.bold,bgMagenta.bold' 'npm run start' 'npm run api'"
+    "start": "concurrently --kill-others --prefix '[{name}]' --names 'BUNDLE,API' -c 'bgBlue.bold,bgMagenta.bold' 'npm run app' 'npm run api'"
   },
   "author": "Anri Digholm",
   "license": "ISC",
