--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.14.0",
     "googleapis": "^14.1.0",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.15.1",
     "mongodb": "^2.2.11",
     "multer": "^1.2.0",
     "react": "^15.3.1",
